# image-generator

./: .gitignore  Cargo.toml  README.md  default.nix  shell.nix
drawings/: example.jsonnet
drawings/lib/: icon-studio.libsonnet
examples/: by_tag.json  choose_everytime.json  choose_once.json  circle.json  grid.json  grid2.json  icon.json  line.json  line2.json  one_of_names.json  ring.json  sequence.json  sun.json
sketch/: example.dhall  example.json  example.jsonnet  icon-studio.libsonnet  icons.dhall  icons.libsonnet  numbers.libsonnet  playground.jsonnet  structure.json
src/: composition.rs  icon.rs  line.rs  main.rs  objects.rs  palette.rs  rendable.rs  structure.rs  tag.rs
