[package]
name = "image-generator"
version = "2.0.0"
authors = ["Ingolf Wagner <contact@ingolf-wagner.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

maintenance = { status = "actively-developed" }

exclude = [ "shell.nix", "default.nix" ]

[dependencies]
cairo-sys-rs = "0.9.2"


