[package]
name = "image-generator"
version = "2.0.0"
authors = ["Ingolf Wagner <contact@ingolf-wagner.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

maintenance = { status = "actively-developed" }

exclude = [ "shell.nix", "default.nix" ]

[dependencies]
cairo-rs = { version = "0.8.0", features = [ "png" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
palette = "0.5"
rand = "0.7"
