[package]
name = "image-generator"
version = "3.0.0"
authors = ["Ingolf Wagner <contact@ingolf-wagner.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

description = "Use JSON files to render images."
documentation = "https://github.com/mrVanDalo/image-generator"
homepage = "https://github.com/mrVanDalo/image-generator"
repository = "https://github.com/mrVanDalo/image-generator"
readme = "README.md"
keywords = ["image", "drawing"]
categories = ["graphics","multimedia::images", "rendering","visualization"]
license = "GPL-3.0"
license-file = "LICENSE"
maintenance = { status = "actively-developed" }
exclude = [ "shell.nix", "default.nix" ]

[dependencies]
cairo-rs = { version = "0.8.0", features = [ "png" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
palette = "0.5"
rand = "0.7"
structopt = "0.3"
